clang/test/BSC/Negative/Method/Struct/struct_toplevel_func_not_found/struct_toplevel_func_not_found.cbs
// RUN: %clang_cc1 -verify %s

struct F {
};
void struct F::increase(struct F* this) { 
    
}

int main() {
    increase(); // expected-warning {{call to undeclared function 'increase'; ISO C99 and later do not support implicit function declarations}}
    return 0;
}